# linux_uart

./: select.c  uart.c
src/: CMakeLists.txt  main.c  rearview_mcu.c  regwr_cb.c  run.c  spi_reg.c
src/general/: argparse.c  pp_uart.c
src/include/: can-msg.h  mcu_ctrl.h  rearview_mcu.h  run.h  spi_reg.h
src/include/mcu-reg/: boot-info.h  burn_flash.h  can-event.h  mcu-info.h  mpu-burn-mcu.h  mpu-business.h
